--- a/DotnetFinancialTrackerApp/Components/_Imports.razor
+++ b/DotnetFinancialTrackerApp/Components/_Imports.razor
@@ -7,8 +7,9 @@
 @using Microsoft.JSInterop
 @using DotnetFinancialTrackerApp
 @using DotnetFinancialTrackerApp.Components
-@using DotnetFinancialTrackerApp.Components.Shared
+@using DotnetFinancialTrackerApp.Components.UI
 @using DotnetFinancialTrackerApp.Models
 @using DotnetFinancialTrackerApp.Services
 @using DotnetFinancialTrackerApp.Components.Layout
+@using DotnetFinancialTrackerApp.Theme
 @using MudBlazor
