--- a/DotnetFinancialTrackerApp/Components/UI/UiButton.razor
+++ b/DotnetFinancialTrackerApp/Components/UI/UiButton.razor
@@ -21,7 +21,7 @@
 @code {
     [Parameter] public RenderFragment? ChildContent { get; set; }
     [Parameter] public Variant Variant { get; set; } = Variant.Filled;
-    [Parameter] public Color Color { get; set; } = Color.Primary;
+    [Parameter] public Color Color { get; set; } = Color.Dark;
     [Parameter] public bool Disabled { get; set; }
     [Parameter] public EventCallback<MouseEventArgs> OnClick { get; set; }
     [Parameter] public bool FullWidth { get; set; }
@@ -31,7 +31,7 @@
     [Parameter] public string? EndIcon { get; set; }
     [Parameter] public string? Href { get; set; }
     [Parameter] public string? Target { get; set; }
-    [Parameter] public Size Size { get; set; } = Size.Medium;
+    [Parameter] public Size Size { get; set; } = Size.Large;
     [Parameter] public ButtonType ButtonType { get; set; } = ButtonType.Button;
     [Parameter(CaptureUnmatchedValues = true)] public IDictionary<string, object>? AdditionalAttributes { get; set; }
 
